Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in
E
evolution-data-server
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 38
    • Issues 38
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 0
    • Merge Requests 0
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GNOME
  • evolution-data-server
  • Issues
  • #128

Closed
Open
Opened Jun 18, 2019 by Michal Odehnal@modehnal

[LDAP] Claim an error when a Contact List might be saved incomplete

After I will add the LDAP Address Book and try to add Contact List, I cannot add a new contacts to the Contact List.

Versions: evolution-data-server-3.28.5-11.el8.x86_64 evolution-3.28.5-6.el8.x86_64 RHEL 8

Reproducer:

  1. Add a LDAP Address Book.
  2. File -> New -> Contact List, to open the Contact List Editor.
  3. Add a few emails to the Contact List (not existing ones)
  4. Press Save.

Actual Result: Error adding list. Cannot add contact: LDAP error 0x2 (Protocol error)

Expected Result: No errors, Contact List will be saved with defined emails.

From what I tried, I can only add a contact if contact was already defined in the LDAP Book, but I would expect to be able to create a new one this way.

Edited Jun 18, 2019 by Milan Crha
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: GNOME/evolution-data-server#128