I#128 - [LDAP] Claim an error when a Contact List might be saved incomplete

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/issues/128